fix blanket layout problem

--- a/task03/style.css
+++ b/task03/style.css
@@ -256,6 +256,7 @@ p {
   display: flex;
   flex-flow: column wrap;
   justify-content: flex-end;
+  align-content: flex-start;
   height: 153px;
 }
 
